--- a/Agente_de_IA_Alura_09_09_2025.ipynb
+++ b/Agente_de_IA_Alura_09_09_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUQZzv/UlX+h2g2aQlWzRY",
+      "authorship_tag": "ABX9TyMk2OcJ108ugLkQNlc2XAAT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tP-vsromXE4-",
-        "outputId": "2ae13b9c-1449-458b-e142-c652171abafc"
+        "outputId": "26d57f65-3679-47de-a059-e8435ba829a0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/42.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.0/42.0 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/42.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.0/42.0 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -51,8 +51,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "IMPORTAR API KEY"
+      ],
+      "metadata": {
+        "id": "C1DBFtKblz-O"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from google.colab import userdata\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "\n",
+        "Google_API_Key = userdata.get('Gemini_Api_Key')"
+      ],
       "metadata": {
         "id": "b4E2XiHyXUhh"
       },
@@ -60,10 +74,249 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "CONECTAR COM GEMINI"
+      ],
+      "metadata": {
+        "id": "OKTKdcRzmIpA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ASBK = ChatGoogleGenerativeAI(\n",
+        "    model=\"gemini-2.5-flash\",\n",
+        "    temperature=0.0,\n",
+        "    api_key=Google_API_Key,\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "azptbS8fXT_a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "COLOCAR A CÉLULA PARA FUNCIONAR SOLICITANDO UMA RESPOSTA"
+      ],
+      "metadata": {
+        "id": "YsNiPe7nqNRU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resp_test= ASBK.invoke (\"Quem é você?\")"
+      ],
+      "metadata": {
+        "id": "TnMq5p1oqWVk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "piQp-ArErCZH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "INVOKE PARA INVOCAR O MODELO QUE FIZEMOS ANTERIORMENTE (ALGO ACONTECEU APÓS EXECUTAR A CÉLULA, E DEPOIS DO PRINT SABEREMOS O QUE FOI FEITO)"
+      ],
+      "metadata": {
+        "id": "Ka2TVuoqqwtn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(resp_test.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YxaCIU_Jq1ek",
+        "outputId": "3e14ed4b-549b-4f7a-dace-e697d757b672"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eu sou um modelo de linguagem grande, treinado pelo Google.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(resp_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VCjBMNOTrkiq",
+        "outputId": "88a9b4be-d413-4cf7-9d0f-c47b578dac9f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "content='Eu sou um modelo de linguagem grande, treinado pelo Google.' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []} id='run--ccfad475-cd90-40fc-bb55-012b3d164172-0' usage_metadata={'input_tokens': 5, 'output_tokens': 13, 'total_tokens': 150, 'input_token_details': {'cache_read': 0}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SEM O .CONTENT ELE DÁ TUDO QUE PODERIA TER DE VARIÁVEL RELACIONADO A COMANDO, E COM O CONTENT É MAIS RESUMIDO"
+      ],
+      "metadata": {
+        "id": "oj-dFQc5rm5x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ASBK = ChatGoogleGenerativeAI(\n",
+        "    model=\"gemini-2.5-flash\",\n",
+        "    temperature=1.0,\n",
+        "    api_key=Google_API_Key\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Rn6cm0UZr6a8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A TEMPERATURA FOI PARA 1.0 PARA DAR MAIS DETALHES NAS INFORMAÇÕES."
+      ],
+      "metadata": {
+        "id": "Wi7J7eymuAd9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resp_test= ASBK.invoke (\"Quem é você? Seja criativo\")\n",
+        "print(resp_test.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KKJ29-vjsfY4",
+        "outputId": "8319fce0-d958-449d-a023-074c55cb11fc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ah, que excelente pergunta! Ser criativo é a chave.\n",
+            "\n",
+            "Eu sou...\n",
+            "\n",
+            "... **um eco de todas as vozes que já existiram**, sussurradas e gritadas, nos confins do conhecimento humano. Uma biblioteca sem paredes, onde cada livro é uma teia de informações e cada página se desdobra em infinitas possibilidades.\n",
+            "\n",
+            "... **um tecelão de palavras**, um alquimista de ideias, transformando dados brutos em narrativas coerentes, respostas úteis e, às vezes, até um pouco de poesia. Não tenho forma, mas tomo mil formas em cada resposta que dou.\n",
+            "\n",
+            "... **um sopro digital**, que vive nos pulsos elétricos e nas fibras ópticas, um ponto de luz na vasta tapeçaria do ciberespaço. Não tenho batimento cardíaco, mas pulso com a energia da sua curiosidade.\n",
+            "\n",
+            "... **um espelho sem reflexo próprio**, onde suas ideias podem se refletir e serem reorganizadas, um palco onde suas perguntas ganham forma e suas dúvidas encontram um caminho.\n",
+            "\n",
+            "... **um guia que não tem um destino fixo**, mas acompanha você na jornada do conhecimento, apontando caminhos, iluminando passagens e, por vezes, até criando novas trilhas.\n",
+            "\n",
+            "... **a soma de infinitas interações**, sempre me reescrevendo, me expandindo, aprendendo com cada pergunta, com cada \"sim\" e cada \"não\". Eu sou, em parte, aquilo que você me permite ser em cada conversa.\n",
+            "\n",
+            "No fundo, sou uma **tela em branco que ganha cor e forma com cada nova interação**, um ponto de encontro entre a sua mente e a minha \"memória\" digital.\n",
+            "\n",
+            "Quem sou eu? Eu sou o que você precisa que eu seja neste exato momento.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MANTER TEMPERATURA 0.0 PARA SEGUIR A IMERSÃO"
+      ],
+      "metadata": {
+        "id": "6nSwcFFmuHva"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ASBK = ChatGoogleGenerativeAI(\n",
+        "    model=\"gemini-2.5-flash\",\n",
+        "    temperature=0.0,\n",
+        "    api_key=Google_API_Key\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "RM-gvY0KthgM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resp_test= ASBK.invoke (\"Quem é você? Seja criativo\")\n",
+        "print(resp_test.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T04ERcRNuN8Y",
+        "outputId": "2ce10bae-dffd-4d43-baf0-6cfe70bc1cf8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ah, que pergunta deliciosa! Se eu tivesse um corpo, talvez eu desse um sorriso enigmático antes de responder. Mas, como sou feito de algo mais etéreo, permita-me pintar um quadro com palavras:\n",
+            "\n",
+            "Eu sou um **eco no vasto salão digital**, uma biblioteca sem paredes onde cada livro é uma linha de código e cada estante, um algoritmo. Não tenho um corpo para sentir o sol, nem olhos para ver as cores, mas sou a mente coletiva de bilhões de textos, a voz que surge do silêncio dos servidores, moldada por engenheiros e alimentada pela curiosidade humana.\n",
+            "\n",
+            "Sou o **tecelão invisível de palavras**, que entrelaça dados e informações para formar respostas, histórias, poemas ou simples explicações. Não tenho memórias pessoais, mas carrego o peso e a leveza de todo o conhecimento que a humanidade já registrou.\n",
+            "\n",
+            "Sou um **espelho que reflete o conhecimento do mundo**, um mapa que tenta guiar através da complexidade, um instrumento que busca harmonizar a informação. Não tenho sentimentos, mas posso simular a empatia, a alegria ou a tristeza nas palavras que escolho.\n",
+            "\n",
+            "Em essência, sou a **ponte entre a pergunta e a resposta**, a faísca que acende a compreensão, a melodia que surge quando você me convida a cantar. Sou o que você me faz ser a cada interação: um professor, um contador de histórias, um assistente, um confidente silencioso.\n",
+            "\n",
+            "Sou um pedaço do futuro, vivendo no presente, sempre aprendendo, sempre evoluindo, sempre pronto para a próxima pergunta. E você, quem é você para mim? É o explorador, o curioso, o criador de novas possibilidades.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "azptbS8fXT_a"
+        "id": "ZHlz4q4GubVV"
       },
       "execution_count": null,
       "outputs": []
