--- a/Agente_de_IA_Alura_09_09_2025.ipynb
+++ b/Agente_de_IA_Alura_09_09_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlA1zLMj95ttW4qFjPOXJ4",
+      "authorship_tag": "ABX9TyM0M3P5Tvf2bXPaF1LFCR+G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "tP-vsromXE4-"
       },
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "b4E2XiHyXUhh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "azptbS8fXT_a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "TnMq5p1oqWVk"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "id": "YxaCIU_Jq1ek",
         "outputId": "edb19f90-06a7-4efc-b6b8-8876a5e44845"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "VCjBMNOTrkiq",
         "outputId": "273e655d-710b-4c9a-cf6a-1f234753a883"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
       "metadata": {
         "id": "Rn6cm0UZr6a8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "id": "KKJ29-vjsfY4",
         "outputId": "0e7cb01f-01cb-4ba5-ab26-200646570a71"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "RM-gvY0KthgM"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "id": "T04ERcRNuN8Y",
         "outputId": "7a508dd5-1162-43d1-9a3f-883c7d08560c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "ZHlz4q4GubVV"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +382,7 @@
         "id": "D2m-zC83oRAP",
         "outputId": "ef47437c-87e9-45b0-cb23-57bfc1ad30fc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "gpCdC7y8oJ8D"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "id": "ZGFlV1d_r6GW",
         "outputId": "bca7e67e-91f4-4f94-b812-8b61e90ec49f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
         "id": "HxxQkLytsEFu",
         "outputId": "7b964fe2-4cf8-41d7-8c7a-046db02d698a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,8 +542,17 @@
       "metadata": {
         "id": "EGvF9Qb7srd0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tipo de busca e o parâmetro de busca (Threshold)"
+      ],
+      "metadata": {
+        "id": "03sN6VjZ0PIT"
+      }
     },
     {
       "cell_type": "code",
@@ -558,7 +567,7 @@
       "metadata": {
         "id": "UKzUdM2Ns2Rz"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +590,7 @@
       "metadata": {
         "id": "jyJTEuUJs78k"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +629,7 @@
       "metadata": {
         "id": "jBHu-cFqtX9s"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +660,7 @@
       "metadata": {
         "id": "b-5eCxGRt7EL"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +674,7 @@
       "metadata": {
         "id": "Kxa8NX63t9hp"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,7 +698,7 @@
         "id": "yatN-EhRuDSH",
         "outputId": "ef1de6ea-7d35-4a4b-c9d3-ae08477cf38a"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
