--- a/Agente_de_IA_Alura_09_09_2025.ipynb
+++ b/Agente_de_IA_Alura_09_09_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/Xn9ooysglEkdnGbqmOXk",
+      "authorship_tag": "ABX9TyMo5QxWI3tLLtu59q2nNdCI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,7 +178,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "SEM O .CONTENT ELE DÁ TUDO QUE PODERIA TER DE VARIÁVEL RELACIONADO A COMANDO, E COM O CONTENT É MAIS RESUMIDO"
+        "SEM O .CONTENT ELE DÁ TUDO QUE PODERIA TER DE VARIÁVEL RELACIONADO AO COMANDO, E COM O CONTENT É MAIS RESUMIDO"
       ],
       "metadata": {
         "id": "oj-dFQc5rm5x"
