--- a/Agente_de_IA_Alura_09_09_2025.ipynb
+++ b/Agente_de_IA_Alura_09_09_2025.ipynb
@@ -1059,7 +1059,7 @@
         "\n",
         "    print(\"------------------------------------\")"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1095,62 @@
             "------------------------------------\n",
             "Executando nó de triagem...\n",
             "Decidindo após a triagem...\n",
-            "Executando nó de auto_resolver...\n"
+            "Executando nó de auto_resolver...\n",
+            "Decidindo após o auto_resolver...\n",
+            "Rag com sucesso, finalizando o fluxo.\n",
+            "PERGUNTA: Posso reembolsar cursos ou treinamentos da Alura?\n",
+            "DECISÃO: AUTO_RESOLVER | URGÊNCIA: baixa | AÇÃO FINAL: AUTO_RESOLVER\n",
+            "RESPOSTA: Sim, cursos e certificações (o que inclui treinamentos como os da Alura) são reembolsáveis, desde que haja aprovação prévia do gestor e orçamento do time.\n",
+            "CITAÇÕES:\n",
+            " - Documento: Política de Reembolsos (Viagens e Despesas).pdf, Página: 1\n",
+            "   Trecho: Política de Reembolsos (Viagens e Despesas) 1.​ Reembolso: requer nota fiscal e deve ser submetido em até 10 dias corrid\n",
+            " - Documento: Políticas de Home Office.pdf, Página: 1\n",
+            "   Trecho: Políticas de Home Office 1.​ A empresa adota modelo híbrido: mínimo de 2 dias presenciais por semana, salvo exceções apr\n",
+            "------------------------------------\n",
+            "Executando nó de triagem...\n",
+            "Decidindo após a triagem...\n",
+            "Executando nó de auto_resolver...\n",
+            "Decidindo após o auto_resolver...\n",
+            "Rag com sucesso, finalizando o fluxo.\n",
+            "PERGUNTA: É possível reembolsar certificações do Google Cloud?\n",
+            "DECISÃO: AUTO_RESOLVER | URGÊNCIA: baixa | AÇÃO FINAL: AUTO_RESOLVER\n",
+            "RESPOSTA: Sim, certificações são reembolsáveis, desde que haja aprovação prévia do gestor e orçamento do time.\n",
+            "CITAÇÕES:\n",
+            " - Documento: Política de Reembolsos (Viagens e Despesas).pdf, Página: 1\n",
+            "   Trecho: Política de Reembolsos (Viagens e Despesas) 1.​ Reembolso: requer nota fiscal e deve ser submetido em até 10 dias corrid\n",
+            " - Documento: Política de Uso de E-mail e Segurança da Informação.pdf, Página: 1\n",
+            "   Trecho: 5.​ Solicitações de liberação de anexos ou domínios devem ser abertas por chamado, com justificativa do gestor.\n",
+            "------------------------------------\n",
+            "Executando nó de triagem...\n",
+            "Decidindo após a triagem...\n",
+            "Executando nó de auto_resolver...\n",
+            "Decidindo após o auto_resolver...\n",
+            "Rag falhou, sem keywords, vou pedir mais informações...\n",
+            "Executando nó de pedir_info...\n",
+            "PERGUNTA: Posso obter o Google Gemini de graça?\n",
+            "DECISÃO: AUTO_RESOLVER | URGÊNCIA: baixa | AÇÃO FINAL: PEDIR_INFO\n",
+            "RESPOSTA: Para avançar, preciso que detalhe: Tema e contexto específico\n",
+            "------------------------------------\n",
+            "Executando nó de triagem...\n",
+            "Decidindo após a triagem...\n",
+            "Executando nó de auto_resolver...\n",
+            "Decidindo após o auto_resolver...\n",
+            "Rag falhou, sem keywords, vou pedir mais informações...\n",
+            "Executando nó de pedir_info...\n",
+            "PERGUNTA: Qual é a palavra-chave da aula de hoje?\n",
+            "DECISÃO: AUTO_RESOLVER | URGÊNCIA: baixa | AÇÃO FINAL: PEDIR_INFO\n",
+            "RESPOSTA: Para avançar, preciso que detalhe: Tema e contexto específico\n",
+            "------------------------------------\n",
+            "Executando nó de triagem...\n",
+            "Decidindo após a triagem...\n",
+            "Executando nó de auto_resolver...\n",
+            "Decidindo após o auto_resolver...\n",
+            "Rag falhou, sem keywords, vou pedir mais informações...\n",
+            "Executando nó de pedir_info...\n",
+            "PERGUNTA: Quantas capivaras tem no Rio Pinheiros?\n",
+            "DECISÃO: AUTO_RESOLVER | URGÊNCIA: baixa | AÇÃO FINAL: PEDIR_INFO\n",
+            "RESPOSTA: Para avançar, preciso que detalhe: Tema e contexto específico\n",
+            "------------------------------------\n"
           ]
         }
       ]
